# bevy_video

./: .gitignore  Cargo.toml  README.md
examples/video_streaming/: Cargo.toml
examples/video_streaming/src/: main.rs
src/: components.rs  plugin.rs
