[package]
authors = ["Brandon Dyer", "Sethblocks"]
description = "Decode and render h264 video in Bevy 0.10.0"
edition = "2021"
license = "MIT"
name = "bevy_video_playing"
readme = "README.md"
repository = "https://github.com/sethblocks/bevy_video"
version = "0.11.0"
keywords = ["game", "gamedev", "video", "bevy", "cutscene"]
exclude = ["examples"]#no working examples at the moment 

[workspace]
members = ["examples/video_streaming"]
resolver = "2"

[dependencies]
openh264 = {version = "0.3"}
serde = "1.0"

[dependencies.bevy]
default-features = false
features = ["bevy_asset", "bevy_render"]
version = "0.11"
[[example]]
name = "video"
path = "examples\\video_streaming"